--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,6 @@
       - onPostAdded($event) -> Function waiting in the `.ts`.
       - $event -> The actul
   -->
-  <app-post-create (postCreated)="onPostAdded($event)"></app-post-create>
-  <app-post-list [posts]="storedPosts"></app-post-list>
+  <app-post-create></app-post-create>
+  <app-post-list></app-post-list>
 </main>
