--- a/src/app/posts/post-create/post-create.component.html
+++ b/src/app/posts/post-create/post-create.component.html
@@ -12,6 +12,7 @@
         ngModel
         required
         minlength="3"
+        placeholder="Post Title"
         #title="ngModel">
       <mat-error *ngIf="title.invalid">Please enter a post title!</mat-error>
     </mat-form-field>
@@ -24,6 +25,7 @@
         name="content"
         ngModel
         required
+        placeholder="Post Content"
         #content="ngModel"></textarea>
       <mat-error *ngIf="content.invalid">Please enter a post content!</mat-error>
     </mat-form-field>
